# credit-risk-scoring

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
notebooks/: 01_complete_analysis.ipynb  notebook.ipynb
scripts/: evaluate_model.py  run_pipeline.py
src/: config.py
src/credit_risk_scoring/: __init__.py
src/credit_risk_scoring.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/credit_risk_scoring/features/: __init__.py  build_features.py
src/credit_risk_scoring/models/: __init__.py  train_model.py
src/data/: __init__.py  currency.py  load_data.py  merge_data.py  preprocessing.py  save_data.py
src/evaluation/: cross_validation.py
src/features/: __init__.py  feature_engineering.py
src/models/: base_model.py  logistic.py  metrics.py  optimize.py  pipeline.py  predict.py  random_forest.py  train.py  xgboost_model.py
src/utils/: __init__.py  config.py  logger.py
